[package]
name = "kd-tree"
version = "0.1.0"
authors = ["Hidehito Yabuuchi <hdht.ybuc@gmail.com>"]

[dependencies]
failure = "0.1.3"
num-traits = "0.2.6"

serde = { version = "1.0.80", optional = true }
serde_derive = { version = "1.0.80", optional = true }

[dev-dependencies]
noisy_float = "0.1.8"
ordered-float = "1.0.1"
rand = "0.6.1"
serde_json = "1.0.33"

[features]
serialize = ["serde", "serde_derive", "noisy_float/serde-1"]
