[package]
name = "kd-tree"
version = "0.1.0"
authors = ["Hidehito Yabuuchi <hdht.ybuc@gmail.com>"]
edition = "2018"

[dependencies]
failure = "0.1.3"
num-traits = "0.2.6"

[dependencies.serde]
version = "1.0.82"
features = ["derive"]
optional = true

[dev-dependencies]
noisy_float = "0.1.8"
ordered-float = "1.0.1"
rand = "0.6.1"
serde_json = "1.0.33"

[features]
serialize = ["serde"]
